# diya-fm

./: .gitignore  Makefile.am  README.md  configure.ac  diyafm.gresource.xml  diyafm_app.c  diyafm_app.h  diyafm_file_entry.c  diyafm_file_entry.h  diyafm_file_view.c  diyafm_file_view.h  diyafm_notif_msg.c  diyafm_notif_msg.h  diyafm_prefs.c  diyafm_prefs.h  diyafm_utils.c  diyafm_utils.h  diyafm_win.c  diyafm_win.h  fm.c
data/: app.iohub.dev.diyafm.gschema.xml
resources/: diyafm.ui  file-entry.ui  file-view-edit.ui  file-view-opts.ui  file-view.ui  fm.ui  gears-menu.ui  main.css  noti-msg.ui  prefs.ui
